# Calculator-TINF19B3

./: CMakeLists.txt  abstractCalculator.cpp  abstractCalculator.h  github  github.pub  main.cpp
app/classes/: Calculation.cpp  Calculation.h  CalculatorGUI.cpp  CalculatorGUI.h  Logic.cpp  Logic.h
app/ui/: calculator.h  calculator.ui
